# Inner

./: .gitignore  .gitmodules  CMakeLists.txt  Inner.sln  Inner.vcxproj  Inner.vcxproj.filters  main.cpp  packages.config
cmake_modules/: cotire.cmake
game/: InnerWindow.cpp  InnerWindow.h  SFML_Scene.cpp  SFML_Scene.h
includes/: Action.h  BaseObject.h  Debug.h  Entity.h  Inner.h  Map.h  Menu.h  ParticleEngine.h  Resource.h  Resources.h  Scene.h  SceneManager.h  Sprite.h  Tile.h  Window.h  typedefs.h
includes/Objects/: FadeInOutScene.h  MenuScene.h  ParticleEngine.h
includes/imgui/: imconfig.h  imgui.cpp
includes/selene/: BaseFun.h  Class.h  ClassFun.h  Ctor.h  Dtor.h  ExceptionHandler.h  ExceptionTypes.h  Fun.h  LuaName.h  LuaRef.h  MetatableRegistry.h  Obj.h  ObjFun.h  Registry.h  ResourceHandler.h  Selector.h  State.h  Tuple.h  function.h  primitives.h  references.h  traits.h  util.h
res/: contribution.txt  imgui.ini
res/chai/: main.chai
res/chai/particles/: fountain.chai
res/gfx/: NewProject.autosave.scml
res/json/: main.json
res/lua/: main.lua
res/scenes/: main.json
